--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mrfaz/text-control",
+    "name": "TextCmp",
     "description": "SmartCmp for text editing",
     "version": "1.0.0",
     
